--- a/config/samples/monitor_v1alpha1_resourcemonitor.yaml
+++ b/config/samples/monitor_v1alpha1_resourcemonitor.yaml
@@ -4,4 +4,7 @@ metadata:
   name: resourcemonitor-sample
 spec:
   podThreshold: 10
+  alertmanager:
+    namespace: "monitoring"
+    serviceName: "prometheus-kube-prometheus-alertmanager"
 
