update cluster role binding

--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -15,5 +15,6 @@ roleRef:
   name: manager-role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: resourcemonitor-controller-manager
+  namespace: resourcemonitor-system
+
